<resources>
    <string name="app_name">Imjut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="acerca">Acerca de</string>
    <string name="contacto">Contacto</string>

    <!-- Menu -->
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_cerrar_sesion">Cerrar sesion</string>
    <string name="menu_subir_contenido">Subir contenido</string>

    <!-- Login -->
    <string name="email">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Iniciar Sesion</string>
    <string name="crear_cuenta">¿No tienes una cuenta?, creala</string>
    <string name="error_login">Correo o contraseña incorrectos</string>

    <!-- Registrase -->
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="registrarse">Crear Cuenta</string>
    <string name="contras_iguales">Las contraseñas no son iguales</string>
    <string name="nombre">Nombre(s)</string>
    <string name="guardado">Guardado Correctamente en la Base de datos</string>
    <string name="error_registro">Error al crear el usuario</string>

    <!-- Programas -->
    <string name="programas">Programas</string>

    <!-- Eventos -->
    <string name="eventos">Eventos</string>
    <string name="asistir">Asistir</string>
    <string name="titulo_evento">Titulo</string>
    <string name="descripcion_evento">Descripcion</string>

    <!-- Bolsa de Trabajo -->
    <string name="bolsa"> Bolsa de trabajo</string>

    <!-- Galeria -->
    <string name="galeria"> Galeria</string>


    <!-- Objetivos -->
    <string name="objetivo">Descripcion: acercar a los jovenes a la ciencia, el arte y la
        tecnologia por medio de conferencia de jovenes y personas destacadas del mismo estado.
    </string>
    <string name="titulo">E-CAT</string>

    <!-- Asistir Programas -->
    <string name="registrarse_asistir">Registrarse</string>
    <string name="nombre_asistir">Nombre</string>
    <string name="edad">Edad</string>
    <string name="apellido">Apellidos</string>
    <string name="ciudad">Ciudad</string>
    <string name="comunidad">Comunidad</string>
    <string name="numero">Numero Telefonico</string>
    <string name="facebook">Facebook</string>
    <string name="atras"> &lt;&lt; Volver</string>

    <!-- Bolsa Trabajo -->
    <string name="marca_bolsa">Empresa: </string>
    <string name="tipo_trabajo">Tipo de puesto: </string>
    <string name="sueldo_trabajo">Sueldo: </string>
    <string name="descripcion_gral_del_empleo">Descripcion: </string>
    <string name="requisitos_gral">Requisitos: </string>
    <string name="educacion">Educación: </string>
    <string name="habilidades">Habilidades: </string>
    <string name="experiencia">Experiencia: </string>
    <string name="postularme">Postularme</string>
    <string name="postularme_btn">Enviar</string>

    <!-- Home Activities Titles -->
    <string name="programas_title">Programas</string>
    <string name="eventos_title">Eventos</string>
    <string name="bolsa_title">Bolsa de trabajo</string>
    <string name="galeria_title">Galería</string>

    <!-- Subir Contenido -->
    <string name="subir_programa">Subir programa</string>
    <string name="titulo_programa">Nombre del programa</string>
    <string name="objetivo_programa">Objetivos del programa</string>
    <string name="subir_evento">Subir evento</string>
    <string name="subir_bolsa_trabajo">Subir un trabajo</string>
    <string name="subir_galeria">Subir foto a la galería</string>
    <string name="subir_titulo_evento">Nombre del evento</string>
    <string name="subir_descripcion_evento">Descripcion del evento</string>
    <string name="subir_direccion_evento">Dirección</string>
    <string name="elige_fecha">Elige la fecha</string>
    <string name="elige_hora">Elige la hora</string>
    <string name="subir_foto">Examinar</string>
    <string name="descripcion_foto">Descripción de la foto</string>
    <string name="nombre_marca">Nombre de la marca</string>
    <string name="tipo_empleo">Tipo de puesto</string>
    <string name="descripcion_gral_empleo">Descripcion general del empleo</string>
    <string name="sueldo_empleo">Sueldo</string>
    <string name="requisitos_gral_empleo">Requisitos generales del empleo</string>
    <string name="educacion_empleo">Educación</string>
    <string name="habilidades_empleo">Habilidades</string>
    <string name="experiencia_empleo">Experiencia</string>
    <string name="titulo_notificacion">Titulo</string>
    <string name="descripcion_notificacion">Descripción</string>
    <string name="mandar_notificacion">Mandar notificación</string>


    <!-- Contacto -->
    <string name="contacto_title">Contacto</string>
    <string name="correo_contacto">Correo: Imjutuxtepec@gmail.com</string>
    <string name="tel_contacto">Tel: 044 287 128 63 68</string>
    <string name="ciudad_contacto">Ciudad: San Juan Bautista Tuxtepec,Oaxaca,México. C.P. 68300</string>
    <string name="direccion_contacto">Direccion: Av. 5 de Mayo S/N Entre Allende y Guerrero. Col. Centro</string>
    <string name="direccion_imjut">Directora del Instituto Municipal de la Juventud</string>
    <string name="directora">L.C.C Ilse Mariela Nolasco López</string>

    <string name="patrocinadores">Patrocinadores</string>
    <string name="about">Acerca de</string>

    <!-- EVENTOS -->
    <string name="direccion_eventos">Av. 5 de mayo</string>
    <string name="descripcion_eventos">Jueves de cervezas al 2x1 te invitamos a que asistas, precios inigualables</string>
    <string name="hora_eventos">8:00</string>
    <string name="fecha_eventos">20 de marzo 2018</string>

    <!-- DIVAGA -->
    <string name="divaga">Divaga Inc.</string>
    <string name="emergencia">Emergencias</string>

</resources>
