<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Main items -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_1"
            android:title="@string/menu_notificaciones"
            app:actionLayout="@layout/toggle_button"
        />
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/menu_configuracion"/>

        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/menu_contacto"/>

        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/menu_acerca_de"/>
        <item
            android:id="@+id/navigation_item_5"
            android:title="@string/menu_cerrar_sesion"/>
    </group>
</menu>