<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angel.imjut.AsistirActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_asistir"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_edad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edad"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ciudad"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_comunidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comunidad"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="number"
                        android:id="@+id/asistir_numero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numero"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/asistir_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/asistir_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/facebook"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/registrarse_asistir"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarse_asistir"/>

            <TextView
                android:id="@+id/volver"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atras" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
